--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,15 @@ body {
         linear-gradient(to bottom,
             rgba(0, 0, 0, 0.7) 1%,
             rgba(0, 0, 0, 0.4) 44.5%, 
-            rgba(0, 0, 0, 0.4) 42.5%
+            rgba(0, 0, 0, 0.4) 44.5%
         ),
     url(https://github.com/LucasCamposFerreira/pag-netflix/blob/main/img/background.jpg?raw=true);
+    position: relative;
+    height: 100vh; /* Altura total da janela do navegador */
+    background-size: cover; /* Para cobrir toda a área do elemento */
+    background-position: center; /* Para centralizar a imagem */
+    background-repeat: no-repeat; /* Para evitar a repetição da imagem */
+
 
 }
 
@@ -81,7 +87,7 @@ button {
 }
 
 .facebook::before {
-    background-image: url('file:///C:/xampp/htdocs/pag-netflix/img/facebook.png');
+    background-image: url(C:\Users\Lucas\Documents\GitHub\pag-netflix\img\facebook.png );
     background-size: 20px 20px;
     display: inline-block;
     width: 20px; 
@@ -111,10 +117,14 @@ button {
 
 footer {
     margin-top: 50px;
-    width: 100%;
-    height: 260px;
+    padding-bottom: 10px;
     background: rgba(0, 0, 0, 0.75);
     color: #8c8c8c;
+    position: fixed; /* Fixa o rodapé na parte inferior da tela */
+    left: 0;
+    bottom: 0;
+    width: 100%;
+
 }
 
 footer a{
@@ -181,8 +191,4 @@ clear: both;
     border: 1px solid #333;
     width: 138px;
     height: 50px;
-}
-
-.options-box::before {
-
 }
